# control_box_rst

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/: CMakeLists.txt
src/cmake/: control_box_rstConfig.cmake  cpplint.py.access_specifier.patch  lcov.cmake.in  lcov_skip_build.cmake.in  memcheck_skip_build.cmake  msvc_static_runtime.cmake  valgrind_suppress.txt
src/cmake/modules/: FindIPOPT.cmake  FindMATIO.cmake
src/communication/: CMakeLists.txt  message_generation.cmake
src/communication/custom_proto/custom_messages/: custom_controller.proto  custom_final_stage_constraints.proto  custom_final_stage_cost.proto  custom_observer.proto  custom_plant.proto  custom_stage_cost.proto  custom_stage_equalities.proto  custom_stage_inequalities.proto  custom_stage_preprocessors.proto  custom_system_dynamics.proto  custom_task.proto
src/communication/include/corbo-communication/: main_service_client.h  message_parser.h  signal_target_rpc.h  utilities.h
src/communication/proto/messages/: common_messages.proto  corbo_parameters.proto  descriptor_extensions.proto
src/communication/proto/services/: master_service.proto
src/communication/src/: main_service_client.cpp  message_parser.cpp  signal_target_rpc.cpp  utilities.cpp
src/controllers/: CMakeLists.txt
src/controllers/include/corbo-controllers/: controller_interface.h  corbo_controllers.h  dual_mode_controller.h  lqr_controller.h  pid_controller.h  predictive_controller.h  simple_state_controller.h  statistics.h  step_response_generator.h
src/controllers/src/: controller_interface.cpp  dual_mode_controller.cpp  lqr_controller.cpp  pid_controller.cpp  predictive_controller.cpp  simple_state_controller.cpp
src/controllers/test/: test_pid_controller.cpp
src/core/: CMakeLists.txt
src/core/include/corbo-core/: common_signal_target.h  console.h  corbo_core.h  data_exporter_interface.h  factory.h  global.h  macros.h  range.h  reference_trajectory.h  signal_target_interface.h  signals.h  text_style.h  threads.h  time.h  time_series.h  tsv_export.h  types.h  utilities.h  value_comparison.h  yaml_export.h
src/core/src/: common_signal_target.cpp  data_exporter_interface.cpp  global.cpp  reference_trajectory.cpp  signals.cpp  time.cpp  time_series.cpp  tsv_export.cpp  yaml_export.cpp
src/core/test/: test_main.cpp  test_yaml_export.cpp
src/gui/: CMakeLists.txt
src/gui/include/corbo-gui/: collapsable_groupbox.h  color_manager.h  extended_tree_widget.h  horizontal_button_group.h  label_combobox_widget.h  label_edit_widget.h  label_horizontal_line_widget.h  label_slider_widget.h  main_window.h  one_of_param_widget.h  parameter_cache.h  parameter_widget.h  rpc_connection_worker.h  rpc_task_worker.h  scope_collection_widget.h  scope_widget.h  signal_collection_widget.h  signal_helper.h  signal_widget.h  slider_center_stuck_widget.h  toolbox_widget.h  utilities.h
src/gui/src/: app.cpp  collapsable_groupbox.cpp  color_manager.cpp  extended_tree_widget.cpp  horizontal_button_group.cpp  label_combobox_widget.cpp  label_edit_widget.cpp  label_horizontal_line_widget.cpp  label_slider_widget.cpp  main_window.cpp  one_of_param_widget.cpp  parameter_cache.cpp  parameter_widget.cpp  scope_collection_widget.cpp  scope_widget.cpp  signal_collection_widget.cpp  signal_helper.cpp  signal_widget.cpp  toolbox_widget.cpp
src/gui/test/: gui_test.cpp
src/master/: CMakeLists.txt
src/master/include/corbo-master/: master.h
src/master/src/: app.cpp  master.cpp
src/numerics/: CMakeLists.txt
src/numerics/include/corbo-numerics/: algebraic_riccati_continuous.h  algebraic_riccati_discrete.h  collocation_interface.h  controllability.h  corbo_numerics.h  dynamics_eval_interface.h  explicit_integrators.h  finite_differences.h  finite_differences.hpp  finite_differences_collocation.h  finite_differences_interface.h  integrator_interface.h  lyapunov_continuous.h  lyapunov_discrete.h  matrix_utilities.h  observability.h  quadrature.h  quadrature_interface.h  schur.h  schur.hpp  sylvester_continuous.h  sylvester_discrete.h  utilities.h
src/numerics/src/: algebraic_riccati_continuous.cpp  algebraic_riccati_discrete.cpp  controllability.cpp  finite_differences.cpp  lyapunov_continuous.cpp  lyapunov_discrete.cpp  observability.cpp  schur.cpp  sylvester_continuous.cpp  sylvester_discrete.cpp
src/numerics/test/: test_algebraic_riccati_continuous.cpp  test_algebraic_riccati_discrete.cpp  test_controllability.cpp  test_finite_differences.cpp  test_lyapunov_continuous.cpp  test_lyapunov_discrete.cpp  test_matrix_utilities.cpp  test_observability.cpp  test_schur.cpp  test_sylvester_continuous.cpp  test_sylvester_discrete.cpp
src/observers/: CMakeLists.txt
src/observers/src/: dummy.cpp
src/observers/test/: observers_test.cpp
src/optimal_control/: CMakeLists.txt
src/optimal_control/test/: test_full_discretization_grid.cpp  test_main.cpp  test_multiple_shooting_grid.cpp  test_single_shooting_grid.cpp  test_structured_optimal_control_problem.cpp
src/optimization/: CMakeLists.txt
src/optimization/src/: misc.cpp  optimization_problem_interface.cpp  simple_optimization_problem.cpp
src/optimization/test/: test_hyper_graph.cpp  test_hyper_graph_optimization_problem_edge_based.cpp  test_hyper_graph_optimization_problem_ignore_structure.cpp  test_hyper_graph_optimization_problem_vertex_based.cpp  test_levenberg_marquardt_dense.cpp  test_levenberg_marquardt_dense_hyper_graph.cpp  test_levenberg_marquardt_sparse.cpp  test_simple_optimization_problem.cpp  test_solver_ipopt.cpp  test_solver_osqp.cpp
src/plants/: CMakeLists.txt
src/plants/src/: disturbances.cpp  plant_interface.cpp  simulated_plant.cpp  simulated_plant_threaded.cpp
src/systems/: CMakeLists.txt
src/systems/src/: one_step_predictor.cpp  standard_filters.cpp  system_dynamics_interface.cpp  time_value_buffer.cpp
src/tasks/: CMakeLists.txt
src/tasks/src/: benchmark_task_increasing_n_open_loop.cpp  benchmark_task_varying_initial_state.cpp  environment.cpp  task_closed_loop_control.cpp  task_open_loop_control.cpp
src/tasks/test/: environment_test.cpp
(+166 files in other folders)
