<?xml version="1.0"?>
<package format="2">
  <name>control_box_rst</name>
  <version>0.0.2</version>
  <description>The control_box_rst package provides C++ libraries for predictive control, 
               direct optimal control, optimization and simulation.</description>

  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>

  <license>GPLv3</license>

  <url type="website">http://wiki.ros.org/control_box_rst</url>

  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>
  <depend>coinor-libipopt-dev</depend>

  <export>
  </export>

</package>
