<?xml version="1.0"?>
<package format="2">
  <name>control_box_rst</name>
  <version>0.0.7</version>
  <description>The control_box_rst package provides C++ libraries for predictive control, 
               direct optimal control, optimization and simulation.</description>

  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>

  <license>GPLv3</license>

  <url type="website">http://wiki.ros.org/control_box_rst</url>

  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>

  <depend>eigen</depend>
  <depend>coinor-libipopt-dev</depend>

  <!-- Non-catkin package, see REP-136 -->
  <!--exec_depend>catkin</exec_depend-->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
    <rosdoc config="${prefix}/docs/rosdoc.yaml"/>
  </export>

</package>
